--- a/priv/docroot/css/tt.css
+++ b/priv/docroot/css/tt.css
@@ -1,3 +1,31 @@
+#container {width:80%; margin: 30px 0px 0px 50px;}
+
+#nav {
+    margin: 25px 0 0 15px;
+    font-family:"Lucida Grande","Trebuchet MS","Verdana","sans-serif";
+    font-size:11pt;
+    font-weight:700;
+    line-height:13pt;
+    padding-bottom: 5px;
+}
+
+#nav a {
+    color:#000000;
+    text-decoration:none;
+}
+
+#nav a:hover {
+    border-bottom:medium dotted #CC2527;
+    color:blue;
+}
+
+#nav_sep {
+    padding-left:0.3em;
+    padding-right:0.3em;
+}
+
+h1 {font-size: small; font-weight: bold;}
+
 table {
     border-collapse: collapse;
     border-spacing: 0px;
