--- a/priv/docroot/css/tt.css
+++ b/priv/docroot/css/tt.css
@@ -1,4 +1,4 @@
-#container {width:80%; margin: 30px 0px 0px 50px;}
+#container {width:68%; margin: 30px 0px 0px 50px;}
 
 #nav {
     margin: 25px 0 0 15px;
@@ -24,24 +24,39 @@
     padding-right:0.3em;
 }
 
-h1 {font-size: small; font-weight: bold;}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0px;
-}
-
-th span.name,th span.score {padding-right: 10px;}
-td span.name,td span.score {padding-right: 10px;}
+#top {margin: 10px 0 0 50px;}
+#header {font-size: small; font-weight: bold;}
+#emsg {font-size: small; color: red; margin-left: 2em;}
+#main {margin-top: 1em;}
 
 .even {background-color:yellow;}
 .odd {background-color:white;}
-
-
-#main {margin: 10px 0 0 50px;}
 
 #scoreboard {
     display:none;
     margin: 1em 0 0 1em;
 }
 
+#regform {display:none;}
+
+form#regform div {margin-top: 1.5em;}
+
+.mdash {
+    padding: 0 1em; 
+    font-size: medium; 
+    font-weight: bold;
+    margin:20px 0 -20px 0;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0px;
+}
+
+table#ranking th span.name,table#ranking th span.score {padding-right: 10px;}
+table#ranking td span.name,table#ranking td span.score {padding-right: 10px;}
+
+.up-1 {margin:-20px 0 20px 0;}
+.down-1 {margin:20px 0 -20px 0;}
+.down-2 {margin:40px 0 -40px 0;}
+.down-3 {margin:60px 0 -60px 0;}
