Functionality added to be able to create a user: GUI to add user; View that stores the users; Check if the nick is already used;

--- a/priv/docroot/css/tt.css
+++ b/priv/docroot/css/tt.css
@@ -38,8 +38,10 @@
 }
 
 #regform {display:none;}
-
 form#regform div {margin-top: 1.5em;}
+
+#signform {display:none;}
+form#signform div {margin-top: 1.5em;}
 
 .mdash {
     padding: 0 1em; 
