--- a/priv/docroot/css/tt.css
+++ b/priv/docroot/css/tt.css
@@ -55,10 +55,15 @@ table {
     border-spacing: 0px;
 }
 
-table#ranking th span.name,table#ranking th span.score {padding-right: 10px;}
-table#ranking td span.name,table#ranking td span.score {padding-right: 10px;}
+table#ranking th span.name,table#ranking th span.score {padding-right: 20px;}
+table#ranking td span.name,table#ranking td span.score {padding-right: 20px;}
 
 .up-1 {margin:-20px 0 20px 0;}
 .down-1 {margin:20px 0 -20px 0;}
 .down-2 {margin:40px 0 -40px 0;}
 .down-3 {margin:60px 0 -60px 0;}
+
+span.name:hover {
+    color:#666666;
+    cursor:pointer;
+}
